getMyHomeworks method in StidentService updated